Restore Bootstrap & Remove Tailwind Css

--- a/ECommerceMVC.csproj
+++ b/ECommerceMVC.csproj
@@ -7,20 +7,22 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
-        <UpToDateCheckBuilt Include="wwwroot/css/site.css" Set="Css"/>
-        <UpToDateCheckBuilt Include="postcss.config.js" Set="Css"/>
-        <UpToDateCheckBuilt Include="tailwind.config.js" Set="Css"/>
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Data\Migrations\" />
       <Folder Include="wwwroot\lib\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <UpToDateCheckBuilt Include="wwwroot/css/site.css" Set="Css" />
     </ItemGroup>
 
 </Project>
