--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=ecommercedb;User Id=postgres;Password=admin"
+  },
+  "JWT": {
+    "Key": "This is my supper secret key for jwt",
+    "Issuer": "shamir_beishebaev",
+    "Audience": "manas.edu.kg"
   }
 }
