--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ecommercedb;User Id=postgres;Password=admin"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=ecommercedb;User Id=postgres;Password=postgres"
   },
   "JWT": {
     "Key": "This is my supper secret key for jwt",
